# infodrone-parser

./: CMakeLists.txt
data/: anafi-infodrone.pcapng
include/infodrone/: IDataSource.hpp  InfoDroneParser.hpp  PcapDataSource.hpp
src/: InfoDroneParser.cpp  PcapDataSource.cpp  main.cpp
tests/: test_parser.cpp
